Portfolio Concluido + cli ghpages

--- a/angular.json
+++ b/angular.json
@@ -7,8 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineTemplate": true,
-          "inlineStyle": true,
+          "inlineTemplate": false,
+          "inlineStyle": false,
           "style": "scss",
           "skipTests": true
         },
@@ -98,8 +98,18 @@
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "",
+            "repo": ""
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "b10b0d00-8b47-47b0-8150-b57260819c40"
   }
 }
